--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <script src="src/script.js"></script> 
+    <script type= "text/javascript" src="src/script.js"></script> 
   </body>
 </html> 
