--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Game Picker</title>
   </head>
   <body>
+    <div></div>
     <h1>Hello World!</h1>
     <script type= "text/javascript" src="src/script.js"></script> 
   </body>
