got img, div, and p in web

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Game Picker</title>
   </head>
   <body>
-    <div></div>
+    <div id="game-collection"></div>
     <h1>Hello World!</h1>
     <script type= "text/javascript" src="src/script.js"></script> 
   </body>
