added much into script.js, render

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <title>Game Picker</title>
   </head>
   <body>
+    <h1>Review Gamez!</h1>
+    <div>
+        <ul id = "list">
+
+        </ul>
+    </div>
     <div id="game-collection"></div>
-    <h1>Hello World!</h1>
-    <script type= "text/javascript" src="src/script.js"></script> 
+    <script defer type= "text/javascript" src="src/script.js"></script> 
   </body>
 </html> 
