--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Game Picker</title>
   </head>
   <body>
-    <h1>Review Gamez!</h1>
+    <h1>Gamez!</h1>
     <div>
         <ul id = "list">
 
